added images folder in src to add in slideshow. Testing to see if theyre displayed when deployed via github pages

--- a/src/App.css
+++ b/src/App.css
@@ -37,12 +37,19 @@ footer{
   align-items: center;
   justify-content: center;
   background-size: cover;
-  height: 350px;
+  height: 400px;
+  width: 300px;
+  margin: auto;
 }
 
 .each-slide-effect span {
   padding: 20px;
   font-size: 20px;
   background: #efefef;
+  text-align: center;
+  justify-content: center;
+}
+.each-slide-effect {
+  justify-content: center;
   text-align: center;
 }
