--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-
 .headerComponentDiv {
-  text-align: left;
   font-family: 'Courier New', Courier, monospace;
 }
+
 .resumeComponentDiv {
   text-align: left;
   padding-left: 10px;
 }
+
 .homeComponentDiv {
   padding-left: 10px;
 }
-.testimonialDiv{
+
+.testimonialDiv {
   padding-left: 10px;
   padding-right: 10px;
+  text-align: center;
 }
+
 .jobUl {
   padding: 0%;
 }
+
 .jobDescriptionLis {
   padding-bottom: 5px;
 }
-footer{
+
+footer {
   color: black;
   font-size: 18px;
   font-style: bold;
   text-align: center;
-  padding-bottom: 20px;
-  padding-top: 20px;
-  margin-top: auto;
-  margin-bottom: auto;
-  margin-top: 0;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: aliceblue;
 }
 
-.each-slide-effect > div {
+.each-slide-effect>div {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -42,14 +49,17 @@ footer{
   margin: auto;
 }
 
-.each-slide-effect span {
-  padding: 20px;
-  font-size: 20px;
-  background: #efefef;
-  text-align: center;
-  justify-content: center;
-}
+
 .each-slide-effect {
   justify-content: center;
   text-align: center;
+}
+
+.sliderDiv {
+  width: 400px;
+  margin: auto;
+}
+
+body {
+  padding-bottom: 50px;
 }
