--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 .resumeComponentDiv {
   text-align: left;
   padding-left: 10px;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .homeComponentDiv {
@@ -14,6 +15,7 @@
 }
 .aboutMeBio {
   text-align: left;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .aboutMeImages {
@@ -37,6 +39,7 @@
 
 .testimonials {
   text-align: left;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .jobUl {
@@ -96,6 +99,7 @@ body {
   padding-left: 10px;
   padding-right: 10px;
   margin-bottom: 10px;
+  background-color: rgba(255, 255, 255);
 }
 
 .offeringsUl {
