removed background image, made resume order chronological, added more testimonial information

--- a/src/App.css
+++ b/src/App.css
@@ -87,7 +87,7 @@ footer {
 
 body {
   padding-bottom: 50px;
-  background-image: url("./images/leaves.png");
+  /* background-image: url("./images/leaves.png"); */
 }
 
 .offeringDivs {
